k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    name: test
    environment: test
